# ReActAgentSonarFixLangGraphV1

./: .env.example  .gitignore  LICENSE  README.md  code_healer_agent_spec.md  code_healer_demo.py  file_editing_demo.py  keys.py  main.py  pyproject.toml  requirements.txt  show_workflow.py  test_actual_repo_operations.py  test_base_agent_logging.py  test_branch_creation.py  test_code_healer.py  test_config_integration.py  test_config_validation.py  test_github_url_fix.py  test_improved_workflow.py  test_langgraph_bug_hunter.py  test_real_file_healer.py  test_simple_code_healer.py  test_structured_logging.py  view_logs.py  visualize_bughunter_workflow.py  visualize_code_healer_workflow.py  visualize_workflow.py
fixplan/: naveenvivek_SpringBootAppSonarAI.json
fixplan/by_date/: 2025-11-15.json
fixplan/by_severity/: blocker.json  critical.json  major.json
fixplans/by_date/2025-11/: fixplan_ISSUE-001_20251115_165924.json  fixplan_ISSUE-004_20251115_165924.json
fixplans/by_project/demo-project/: fixplan_ISSUE-002_20251115_165924.json
fixplans/by_severity/low/: fixplan_ISSUE-003_20251115_165924.json
fixplans/by_severity/medium/: fixplan_ISSUE-005_20251115_165924.json
sonar_ai_agent/: __init__.py  config.py  models.py
sonar_ai_agent/agents/: __init__.py  base_agent.py  bug_hunter_agent.py  code_healer_agent.py
sonar_ai_agent/integrations/: __init__.py  bedrock_client.py  git_client.py  gitlab_client.py  sonarqube_client.py
sonar_ai_agent/utils/: __init__.py  fixplan_storage.py  logger.py
sonar_ai_agent/workflows/: __init__.py  bug_hunter_workflow.py  code_healer_workflow.py  complete_workflow.py
test_files/: DatabaseHelper.java
