[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sonar-ai-agent"
version = "0.1.0"
description = "Intelligent code quality automation tool with AI agents for SonarQube issue resolution"
authors = [
    {name = "SonarQube AI Agent Team", email = "sonar-ai-agent@company.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Bug Tracking",
]
dependencies = [
    "langgraph>=0.2.0",
    "langfuse>=2.0.0",
    "ollama>=0.3.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.12.0",
    "flake8>=6.1.0",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/naveenvivek/SpringBootAppSonarAI"
Repository = "https://github.com/naveenvivek/SpringBootAppSonarAI"
Issues = "https://github.com/naveenvivek/SpringBootAppSonarAI/issues"

[project.scripts]
sonar-ai-agent = "sonar_ai_agent.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sonar_ai_agent*"]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"